--- a/templates/addMenu.html
+++ b/templates/addMenu.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>{{restaurant.name}}</h1>
 	<h2>Add new menu</h2>
-	<form action={{url_for('NewMenu', restaurant_id = restaurant.id)}}, method='POST'>
+	<form action="{{url_for('NewMenu', restaurant_id = restaurant.id)}}", method='POST'>
 		<h3>Name:</h3>
 		<input type="text" name="name">
 		<button type="submit">Submit</button>
